# research-template

./: .gitmodules  LICENSE.txt  README - Kopi.md  README.md  cookiecutter - Kopi.json  cookiecutter.json  cookiecutter_old.json  create_templates.ipynb  sfs.ipynb
{{cookiecutter.repo_name}}/: .gitignore  .rcloneignore  .rcloneignore.disabled  .treeignore  .treeignore.disabled  LICENSE.txt  README.md  activate - Kopi.ps1  activate - Kopi.sh  activate.ps1  activate.sh  deactivate - Kopi.ps1  deactivate - Kopi.sh  deactivate.ps1  deactivate.sh  dmp.json  network_analysis.ipynb  platform_rules.json  project.toml  pyproject - Kopi.toml  pyproject.toml  run_setup - Kopi.ps1  run_setup - Kopi.sh  run_setup.ps1  run_setup.sh  run_setup_notworking.ps1  set_raw_data.py  setup - Kopi.sh  setup.ps1  setup.py  setup.py.py  setup.sh  test.ipynb
{{cookiecutter.repo_name}}/setup/: Untitled-1.ipynb  code_templates.py  create.ps1  create.py  create.sh  deic_storage_download.py  get_dependencies.py  install_dependencies.py  intro.py  main_setup.py  outro.py  project_setup - Kopi.py  project_setup.py  pyproject - Kopi.toml  pyproject.toml  readme_templates.py  remote_repository.py  renv_setup.r  repokit_install.py  run_backup.py  run_setup.ps1  run_setup.py  run_setup.sh  set_dataset.py  set_raw_data.py  setup.ps1  setup.py  setup.sh  setup_old.py  update.py  update_requirements.py  utils.py  version_control.py
{{cookiecutter.repo_name}}/setup/commands/: deic_storage_download.py  get_dependencies.py  install_dependencies.py  run_backup.py  run_setup.py  set_dataset.py  update_requirements.py
{{cookiecutter.repo_name}}/setup/commands - Kopi/: deic_storage_download.py  get_dependencies.py  run_backup.py  set_dataset.py
{{cookiecutter.repo_name}}/setup/repokit/: .gitignore  .gitmodules  README.md  backup.py  backup_.py  backup_old.py  ci.py  deps.py  env.py  general_tools.py  git_remote.py  linting.py  pyproject.toml  repos.py  scp.py  tomlutils.py  vcs.py  vcs_old.py
{{cookiecutter.repo_name}}/setup/repokit/.github/workflows/: ci.yml
{{cookiecutter.repo_name}}/setup/repokit/backup/: __init__.py  cli.py  rclone.py  registry.py  remotes.py
{{cookiecutter.repo_name}}/setup/repokit/common/: __init__.py  base.py  constants.py  env.py  paths.py  prompts.py  secretstore.py  tomlutils.py
{{cookiecutter.repo_name}}/setup/repokit/rdm/: __init__.py  clean.py  clean_old.py  dataset.py  dataverse.py  dataverse_old.py  dcas.py  dmp.py  editor.py  publish.py  zenodo.py
{{cookiecutter.repo_name}}/setup/repokit/rdm/_dmp/: __init__.py  __main__.py  compat.py  config.py  cookiecutter_sync.py  defaults.py  extensions.py  io.py  normalize.py  paths.py  schema.py
{{cookiecutter.repo_name}}/setup/repokit/rdm/_editor/: __init__.py  app.py  autosave.py  deps.py  file_dialog.py  publish_sidebar.py  schema_editors.py  sections.py  utils.py
{{cookiecutter.repo_name}}/setup/repokit/readme/: __init__.py  sections.py  template.py
{{cookiecutter.repo_name}}/setup/repokit/src/repokit/: agent.py  ci.py  cli.py  deps.py  env.py  linting.py  repos.py  scp.py
{{cookiecutter.repo_name}}/setup/repokit/src/repokit/readme/: sections.py  template.py
{{cookiecutter.repo_name}}/setup/repokit/src/repokit/templates/: code.py  example.py  jinja.py  tests.py
{{cookiecutter.repo_name}}/setup/repokit/src/repokit/vcs/: __init__.py  datalad_w.py  dvc_w.py  git_w.py
{{cookiecutter.repo_name}}/setup/repokit/templates/: code.py  example.py  jinja.py  tests.py
{{cookiecutter.repo_name}}/setup/repokit/tests/: test_imports.py
{{cookiecutter.repo_name}}/setup/repokit/vcs/: __init__.py  datalad_w.py  dvc_w.py  git_w.py
{{cookiecutter.repo_name}}/setup/src/: code_templates.py  project_setup.py  readme_templates.py  remote_repository.py  run_setup.ps1  run_setup.sh  run_setup_conda.sh  setup_conda - Kopi.ps1  utils.py  version_control.py
{{cookiecutter.repo_name}}/setup/utils/: __init__.py  backup_tools - Kopi.py  backup_tools.py  ci_tools.py  ci_tools_hardcoded.py  code_templates.py  code_templates_noprefix.py  dcas_migration.py  deic_storage_download.py  dmp_editor - Kopi.py  dmp_editor.py  dmp_editor_old.py  dmp_tools.py  dmp_tools_old.py  dmp_tools_org.py  empty_files.ipynb  example_templates.py  general_tools.py  general_tools_notworking.py  general_tools_working.py  get_dependencies.py  install_dependencies.py  jinja_tools.py  publish_common.py  publish_dataverse.py  publish_from_dmp.py  publish_tools.py  publish_zenodo.py  readme_sections - Kopi.py  readme_sections.py  readme_templates - Kopi.py  readme_templates.py  remote_repository.py  repo_setup.py  repo_tools.py  run_backup.py  run_setup.py  set_dataset.py  set_dataset_old.py  set_dataset_org.py  (+8 more)
{{cookiecutter.repo_name}}/setup/utils/j2/code_templates/matlab/: get_dependencies.m.j2  script.m.j2
{{cookiecutter.repo_name}}/setup/utils/j2/code_templates/python/: main.py.j2  (+1 more)
{{cookiecutter.repo_name}}/setup/utils/j2_templates/: code_templates_hardcoded.py  example_templates_hardcoded.py
{{cookiecutter.repo_name}}/setup/utils/j2_templates/readme_templates/: readme_template.md.j2
{{cookiecutter.repo_name}}/setup/utils/ops/: backup.py  ci.py  deps.py  env.py  git_remote.py  toml.py  vcs.py
{{cookiecutter.repo_name}}/setup/utils/rdm/: dataset.py  dataverse.py  dcas.py  dmp.py  editor.py  publish.py  zenodo.py
{{cookiecutter.repo_name}}/setup/utils/readme/: sections.py  template.py
{{cookiecutter.repo_name}}/setup/utils/templates/: example.py
{{cookiecutter.repo_name}}/setup/utils_new/: __init__.py  backup_utils.py  general_utils.py  other.py  repo_utils.py  vc_utils.py  vir_env_utils.py
{{cookiecutter.repo_name}}/src/: deic_storage_download.py  matlab_setup.m  python_boilerplate.txt  python_workflow_boilerplate.txt  r_boilerplate.txt.txt  r_workflow_boilerplate.txt  renv_setup.r  renv_setup_2.r
{{cookiecutter.repo_name}}/src/R/: data_collection.r  modeling.r  preprocessing.r  utils.r  visualization.r  workflow.r
{{cookiecutter.repo_name}}/src/python/: data_collection.py  modeling.py  preprocessing.py  utils.py  visualization.py  workflow.py
(+150 files in other folders)
