[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "Insert project description here"
dependencies = []
requires-python = ">=3.9"

[tool.uv]
tool_description = "Configuration for uv package manager behavior."

[tool.cookiecutter]
tool_description = "Project template metadata for setup, reproducibility, and scaffolding."
tool_replaces = ".cookiecutter"
PROJECT_NAME = ""
REPO_NAME = ""
PROJECT_DESCRIPTION = "Insert project description here"
VERSION = "0.0.1"
AUTHORS = "Your Name"
ORCIDS = "Provide your ORCID"
EMAIL = "Provide your email"
CODE_LICENSE = "MIT"
DOC_LICENSE = "CC-BY-4.0"
DATA_LICENSE = "CC-BY-4.0"
PROGRAMMING_LANGUAGE = "Python"
PYTHON_ENV_MANAGER = "Venv"
VERSION_CONTROL = "None"
REMOTE_BACKUP = "None"
REMOTE_STORAGE = "None"
CODE_REPO = "None"
PYTHON_VERSION = "None"


[tool.datasets]
tool_description = "Dataset path patterns used by data-management workflows."
patterns = [
  "data/*"
]

[tool.rcloneignore]
tool_description = "Ignore patterns for backup and remote synchronization."
tool_replaces = ".rcloneignore"
patterns = [
  "bin/",
  ".venv/",
  ".conda/"
]

[tool.treeignore]
tool_description = "Ignore patterns for project tree visualizations."
tool_replaces = ".treeignore"
patterns = [
  "bin/",
  "utils/",
  ".conda/",
  ".venv/",
  "renv/",
  ".git/",
  ".github/",
  ".datalad/",
  ".gitkeep",
  ".env",
  "__pycache__",
  "repokit/",
  "repokit.egg-info/",
]

[tool.dcas]
tool_description = "Files and folders used in DCAS migration."
patterns = [
  "README.md",
  "docs",
  "results",
  "uv.lock",
  "environment.yml",
  "requirements.txt",
  "dmp.json",
]

[tool.platform_rules]
tool_description = "Platform-specific package compatibility rules."
tool_replaces = "platform_rules.json"
pywin32 = "win32"
pypiwin32 = "win32"
pywinpty = "win32"
wmi = "win32"
pync = "darwin"
pyobjc = "darwin"
dbus-python = "linux"
pygobject = "linux"
pyudev = "linux"

[tool.file_descriptions]
tool_description = "Descriptions of project files and folders for docs and automation."
tool_replaces = "file_descriptions.json"
