[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "Insert project description here"
dependencies = []
requires-python = ">=3.9"

[tool.uv]

[tool.cookiecutter]
tool-description = "Project template metadata for setup, reproducibility, and scaffolding."
tool-replaces = ".cookiecutter"
PROJECT_NAME = ""
REPO_NAME = ""
PROJECT_DESCRIPTION = "Insert project description here"
VERSION = "0.0.1"
AUTHORS = "Your Name"
ORCIDS = "Provide your ORCID"
EMAIL = "Provide your email"
CODE_LICENSE = "MIT"
DOC_LICENSE = "CC-BY-4.0"
DATA_LICENSE = "CC-BY-4.0"
PROGRAMMING_LANGUAGE = "Python"
PYTHON_ENV_MANAGER = "Venv"
VERSION_CONTROL = "None"
REMOTE_BACKUP = "None"
REMOTE_STORAGE = "None"
CODE_REPO = "None"
PYTHON_VERSION = "None"


[tool.repokit_install]
tool-description = "Repokit package installation policy used by setup scripts."
source = "github"
github_base = "https://github.com/CBS-HPC"
github_ref = "codex/py310-support"
repokit_common_version = "0.1"
repokit_backup_version = "0.1"
repokit_dmp_version = "0.1"
repokit_version = "0.1"


[tool.datasets]
tool-description = "Dataset path patterns used by data-management workflows."
patterns = [
  "data/*"
]

[tool.data_policy]
tool-description = "Agent data-access policy: paths with sensitive/proprietary data that must be handled with restricted access and synced to agent ignore files."
patterns = [
  "data/sensitive/*",
  "data/proprietary/*",
]

[tool.rcloneignore]
tool-description = "Ignore patterns for backup and remote synchronization."
tool-replaces = ".rcloneignore"
patterns = [
  "bin/",
  ".venv/",
  ".conda/"
]

[tool.treeignore]
tool-description = "Ignore patterns for project tree visualizations."
tool-replaces = ".treeignore"
patterns = [
  "bin/",
  "utils/",
  ".conda/",
  ".venv/",
  "renv/",
  ".git/",
  ".github/",
  ".datalad/",
  ".gitkeep",
  ".env",
  "__pycache__",
  "repokit/",
  "repokit.egg-info/",
]

[tool.dcas]
tool-description = "Files and folders used in DCAS migration."
patterns = [
  "README.md",
  "docs",
  "results",
  "uv.lock",
  "environment.yml",
  "requirements.txt",
  "dmp.json",
]

[tool.platform_rules]
tool-description = "Platform-specific package compatibility rules."
tool-replaces = "platform_rules.json"
pywin32 = "win32"
pypiwin32 = "win32"
pywinpty = "win32"
wmi = "win32"
pync = "darwin"
pyobjc = "darwin"
dbus-python = "linux"
pygobject = "linux"
pyudev = "linux"

[tool.file_descriptions]
tool-description = "Descriptions of project files and folders for docs and automation."
tool-replaces = "file_descriptions.json"

