[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repokit"
version = "0.1"
dependencies = [
  "python-dotenv",
  "PyYAML",
  "requests",
  "beautifulsoup4",
  "nbformat",
  "pathspec",
  "psutil",
  "py-cpuinfo",
  "Jinja2",
  "streamlit",
  "dirhash",

  # TOML read/write split:
  'toml ; python_version < "3.11"',
  'tomli-w ; python_version >= "3.11"',
]

[project.scripts]
backup = "repokit.backup_tools:main"
set-dataset = "repokit.rdm.dataset:main"
update-dependencies = "repokit.deps:main"
update-readme = "repokit.readme.template:main"
reset-templates = "repokit.templates.code:main"
code-examples = "repokit.templates.example:main"
git-config = "repokit.git_remote:main"
ci-control = "repokit.ci:ci_control"
dcas-migration = "repokit.rdm.dcas:main"
dmp-update = "repokit.rdm.dmp:main"
dmp-editor = "repokit.rdm.editor:cli"

[tool.setuptools.packages.find]
where = ["."]