[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repokit"
version = "0.1"
description = "Repokit core CLI for research automation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "CBS-HPC"}]
keywords = ["research", "reproducibility", "automation", "data-management"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

dependencies = [
  "python-dotenv",
  "PyYAML",
  "requests",
  "beautifulsoup4",
  "nbformat",
  "pathspec",
  "psutil",
  "py-cpuinfo",
  "Jinja2",
  "streamlit",
  "jsonschema",
  "dirhash",
  "agr",
  "ruff>=0.6",
  "mypy>=1.10",
  "wxpython",
  "repokit-common",
  "repokit-backup",
  "repokit-dmp",

  # TOML read/write split:
  'toml ; python_version < "3.11"',
  'tomli-w ; python_version >= "3.11"',
]

requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/CBS-HPC/repokit"
Repository = "https://github.com/CBS-HPC/repokit"
Issues = "https://github.com/CBS-HPC/repokit/issues"


[project.scripts]
repokit = "repokit.cli:main"
repokit-backup = "repokit_backup.cli:main"
repokit-dmp = "repokit_dmp.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff>=0.6",
  "mypy>=1.10",
  "uv",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
repokit = [
  "templates/j2/**/*",
  "templates/agent/**/*",
  "templates/**/*.j2",
  "templates/**/*.md",
  "templates/**/*.yaml",
  "templates/**/*.yml",
  "templates/**/*.json",
]


[tool.ruff]
line-length = 100
# set to "py310" if your lowest supported Python is 3.10
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["build", "dist", ".venv", ".mypy_cache", "__pycache__", "data", "notebooks", "external"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]


[tool.ruff.format]
# Ruff formatter is Black-compatible
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # or "google"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
strict_optional = false
exclude = '(^\.venv/|^build/|^dist/|^external/)'